[fix] command