@@ -41,10 +41,10 @@ public class Main {
                 files[0].getPath();
 
                 try {
-
                     System.out.println("エンコード開始");
                     System.out.println("ファイル名:" + files[0].getName());
-                    ProcessBuilder pb = new ProcessBuilder("ffmpeg", "-pattern_type", "none","-i", files[0].getPath() , files[0].getName().split("\\.")[0] + ".mp4\"");
+                    Runtime.getRuntime().exec("mv "+files[0].getPath() + " " + files[0].getParent()+ "¥0.flv");
+                    ProcessBuilder pb = new ProcessBuilder("ffmpeg" ,"-i", files[0].getParent()+ "¥0.flv" , files[0].getName().split("¥¥.") + ".mp4");
                     pb.directory(new File(folder2.getPath()));
                     pb.inheritIO();
                     System.out.println("コマンド:" + pb.command());
